--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -36,6 +36,19 @@ jobs:
       - name: Grant Permissions to gradlew
         run: chmod +x gradlew
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mkdocs mkdocs-material
+
+      - name: Build MkDocs
+        run: mkdocs build
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
@@ -47,8 +60,8 @@ jobs:
 
       - name: Relocate API Documentation Assets
         run: |
-          mkdir -p docs/${{ env.REPOSITORY }}/documentation
-          cp -r build/dokka/htmlMultiModule/* docs/${{ env.REPOSITORY }}/documentation
+          mkdir -p build/docs/${{ env.REPOSITORY }}/documentation
+          cp -r build/dokka/htmlMultiModule/* build/docs/${{ env.REPOSITORY }}/documentation
 
       - id: publish-docs
         name: Deploy API Documentation
@@ -56,7 +69,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
-          source-file: docs/${{ env.REPOSITORY }}/documentation/
+          source-file: build/docs/${{ env.REPOSITORY }}/
           destination-folder: ${{ env.REPOSITORY }}
           destination-repo: teogor/source.teogor.dev
           user-email: open-source@teogor.dev
@@ -73,6 +86,17 @@ jobs:
         with:
           repository: teogor/source.teogor.dev
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          ref: ${{ env.DESTINATION_BRANCH || 'main' }}
+          # This is important to fetch the changes to the previous commit
+          fetch-depth: 0
+
+      - name: Prettify code
+        uses: creyD/prettier_action@v4.3
+        with:
+          # This part is also where you can pass other options, for example:
+          prettier_options: --write ${{ env.REPOSITORY }}/**/*.{js,html,css,json}
+          only_changed: False
+          same_commit: True
 
       - name: Create PR (Pull Request)
         run: |
