--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -27,8 +27,9 @@ env:
 
 jobs:
   synchronize-documentation:
+    environment: PRODUCTION
     runs-on: ubuntu-latest
-    name: Synchronize Repository API Documentation
+    name: Synchronize Repository Documentation
     steps:
       - uses: actions/checkout@v4
 
@@ -44,10 +45,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material
+          pip install mkdocs-material
+          pip install mkdocs-material[recommended,git,imaging]
 
       - name: Build MkDocs
-        run: mkdocs build
+        run: |
+          mkdocs build --clean
+          mkdocs --version
 
       - name: Setup Java
         uses: actions/setup-java@v3
@@ -58,13 +62,13 @@ jobs:
       - name: Generate API Documentation
         run: ./gradlew -D'org.gradle.unsafe.configuration-cache=false' dokkaHtmlMultiModule
 
-      - name: Relocate API Documentation Assets
+      - name: Relocate API References
         run: |
-          mkdir -p build/docs/${{ env.REPOSITORY }}/documentation
-          cp -r build/dokka/htmlMultiModule/* build/docs/${{ env.REPOSITORY }}/documentation
+          mkdir -p build/docs/${{ env.REPOSITORY }}/html
+          cp -r build/dokka/htmlMultiModule/* build/docs/${{ env.REPOSITORY }}/html
 
       - id: publish-docs
-        name: Deploy API Documentation
+        name: Deploy Documentation
         uses: ./.github/workflows/sync-docs/
         env:
           API_TOKEN_GITHUB: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -77,6 +81,7 @@ jobs:
           destination-branch-create: ${{ env.DESTINATION_BRANCH }}
 
   build-and-deploy:
+    environment: PRODUCTION
     needs: synchronize-documentation
     name: Build and Deploy Updated API Documentation
     runs-on: ubuntu-latest
@@ -90,13 +95,13 @@ jobs:
           # This is important to fetch the changes to the previous commit
           fetch-depth: 0
 
-      - name: Prettify code
-        uses: creyD/prettier_action@v4.3
-        with:
-          # This part is also where you can pass other options, for example:
-          prettier_options: --write ${{ env.REPOSITORY }}/**/*.{js,html,css,json}
-          only_changed: False
-          same_commit: True
+#      - name: Prettify code
+#        uses: creyD/prettier_action@v4.3
+#        with:
+#          # This part is also where you can pass other options, for example:
+#          prettier_options: --write ${{ env.REPOSITORY }}/**/*.{js,html,css,json}
+#          only_changed: False
+#          same_commit: True
 
       - name: Create PR (Pull Request)
         run: |
