--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
 name: Publish
 
 on:
+  release:
+    types: [ released ]
   workflow_dispatch:
 
 jobs:
@@ -8,16 +10,12 @@ jobs:
     name: Snapshot build and publish
     runs-on: ubuntu-latest
     environment: PRODUCTION
-    timeout-minutes: 120
     env:
       ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
       ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_PASSWORD }}
       ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_KEY_ID }}
       ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
       ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
-      SONATYPE_CONNECT_TIMEOUT_SECONDS: 120
-      SONATYPE_CLOSE_TIMEOUT_SECONDS: 1800
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3.1.0
@@ -31,6 +29,6 @@ jobs:
       - name: Grant Permission to Execute Gradle
         run: chmod +x gradlew
 
-      - name: Publish to Maven Central
+      - name: Publish to MavenCentral
         run: |
           ./gradlew :api:publish --no-configuration-cache
