Preparing for release 1.0.0-alpha02

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
       - releases.md
       - Implementation: releases/implementation.md
       - Changelog:
+          - 1.0.0-alpha02: releases/changelog/1.0.0-alpha02.md
           - 1.0.0-alpha01: releases/changelog/1.0.0-alpha01.md
   - Reference: reference.md
   - Sponsor: sponsor.md
