Update publish task module API dependency to `gradle-plugin-api`

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,4 +31,4 @@ jobs:
 
       - name: Publish to MavenCentral
         run: |
-          ./gradlew :api:publish --no-configuration-cache
+          ./gradlew :gradle-plugin-api:publish --no-configuration-cache
